[project]
name = "grafana_git_sync"
description = "import/export from grafana"
version = "0.0.1"
authors = [{ name = "Bea Steers", email = "bea.steers@gmail.com" }]
dependencies = ["requests", "packaging", "ruamel.yaml", "fire", "tqdm"]

[project.scripts]
grafana-git-sync = "grafana_git_sync.resources:cli"
grafana-git-sync-compare = "grafana_git_sync.compare:cli"


[tool.setuptools]
packages = ["grafana_git_sync"]